# repo_agent

./: .env.example  .gitignore  README.en.md  README.md  README.zh.md  agent.py  config.py  pyproject.toml  requirements.txt  tools.py
repo_agent/: __init__.py  __main__.py
repo_agent/agent/: __init__.py  client.py  loop.py  prompts.py
repo_agent/cli/: __init__.py  remote.py
repo_agent/config/: __init__.py  settings.py
repo_agent/daemon/: __init__.py  app.py  models.py  session_manager.py
repo_agent/kb/: __init__.py  index.py  loader.py
repo_agent/rag/: __init__.py  embeddings.py  retriever.py  store.py
repo_agent/remote/: __init__.py  client.py
repo_agent/tools/: __init__.py  rag.py  registry.py  repo.py
repo_agent/ui/: __init__.py  tui.py
tests/: conftest.py  test_config_settings.py  test_tools_repo.py
