[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-agent"
version = "0.3.0"
description = "本地代码仓库问答 Agent（Gemini/Kimi），支持后续 RAG 与知识库扩展"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "textual>=0.58.1",
]

[project.scripts]
repo-agent = "repo_agent.__main__:main"

[project.optional-dependencies]
# 后续 RAG/知识库 可在此增加依赖，例如：
# rag = ["sentence-transformers", "chromadb"]
# kb = ["langchain-text-splitters"]

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_agent*"]
